// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MoviesList with empty message 1`] = `
<div
  className="page-margin"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Movie
    </div>
    <div
      className="show-for-desktop"
    >
      rating
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No movies
      </span>
    </div>
  </div>
</div>
`;

exports[`should render MoviesList with movies 1`] = `
<div
  className="page-margin"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Movie
    </div>
    <div
      className="show-for-desktop"
    >
      rating
    </div>
  </div>
  <div
    className="list-body"
  >
    <MovieListItem
      rating={195}
      releaseDate={0}
      title="Gum"
      id="1"
      description=""
    />
    <MovieListItem
      rating={109500}
      releaseDate={-345600000}
      title="Rent"
      id="2"
      description=""
    />
    <MovieListItem
      rating={4500}
      releaseDate={345600000}
      title="Credit Card"
      id="3"
      description=""
    />
  </div>
</div>
`;
